# cpp_uwebsock_react_linux_metrics

./: .gitignore  README.md
cppserver/: .clang-format  .gitignore  CMakeLists.txt  README.md
cppserver/examples/: cppserver_client.html
cppserver/include/: cpuUsageCollector.h  icollector.h  memUsageCollector.h  metric.h  server.h  serverArgs.h
cppserver/src/: cpuUsageCollector.cpp  memUsageCollector.cpp  server.cpp  serverMain.cpp
metricui/: package-lock.json  package.json  vite.config.ts
metricui/src/: appConfig.json  routeTree.gen.ts  router.tsx
metricui/src/components/: connectionHeader.tsx  connectionStatus.tsx  cpuUsageComp.tsx  memUsageComp.tsx  simpleNavbar.module.css  simpleNavbar.tsx  streamingChart.tsx
metricui/src/routes/: __root.tsx  cpuUsage.tsx  index.tsx  memUsage.tsx
